fix: remove horizontal scrolling

--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -9,14 +9,7 @@
     border-radius: 30px;
     padding: 10px 20px 10px 35px;
     border: 1px solid black;
-    margin-right: 340px;
-
     font-size: 16px;
-    font-weight: 400;
-    line-height: 19px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: black;
   }
 
   img[alt = "search"] {
@@ -30,7 +23,6 @@
   img[alt = "remove"] {
     cursor: pointer;
     position: absolute;
-    z-index: 2;
     top: 10px;
     left: 220px;
   }
